fixed overlap of sidepanels headers

--- a/main/style.css
+++ b/main/style.css
@@ -234,6 +234,7 @@ body {
     font-weight: 600;
     margin: 0 4px;
     line-height: 15px;
+    word-break: break-all;
 }
 
 .lpanel-boxitem-image {
